xgettext: Add support for AppData XML files
AppData files are used to describe an application for package
management, and are described here:

http://people.freedesktop.org/~hughsient/appdata/

They may also currently be translated using intltool or itstool:

http://people.freedesktop.org/~hughsient/appdata/#translation

--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,9 @@
+2015-06-11  Philip Withnall  <philip.withnall@collabora.co.uk>
+
+	xgettext: add support for AppData files
+	* Makefile.am (TESTS): Add xgettext-appdata-1.
+	* xgettext-appdata-1: New file.
+
 2015-08-21  Daiki Ueno  <ueno@gnu.org>
 
 	* Makefile.am (check_PROGRAMS): Rename from noinst_PROGRAMS, to
