--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,15 @@
+2015-06-11  Philip Withnall  <philip.withnall@collabora.co.uk>
+
+	xgettext: add support for AppData files
+	* x-appdata.h: New file.
+	* x-appdata.c: New file.
+	* xgettext.c: Include x-appdata.h.
+	(language_to_extractor): Add AppData rule.
+	(extension_to_language): Add AppData rule.
+	* Makefile.am (noinst_HEADERS): Add x-appdata.h.
+	(xgettext_SOURCES): Add x-appdata.c.
+	* FILES: Update.
+
 2015-08-21  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: Allow multiple --copyright-holder
