--- a/gettext-runtime/doc/ChangeLog
+++ b/gettext-runtime/doc/ChangeLog
@@ -1,3 +1,8 @@
+2015-06-23  Daiki Ueno  <ueno@gnu.org>
+
+	* Admin/Matrix.java (Matrix): Group teams considering the actual
+	table width, instead of using a hard-coded rule.
+
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.4 released.
