--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2015-06-23  Daiki Ueno  <ueno@gnu.org>
+
+	* ABOUT-NLS: Regenerate for 0.19.5.
+
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.4 released.
