build: Fix build failure on Solaris
* gettext-tools/src/cldr-plurals.c: Include "basename.h".
(main): Place optind on the right hand side of the expression, to
work around build failure on Solaris.
Reported by Dagobert Michelsen in:
<https://lists.gnu.org/archive/html/bug-gettext/2015-06/msg00015.html>.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,11 @@
 2015-06-23  Daiki Ueno  <ueno@gnu.org>
 
+	* cldr-plurals.c: Include "basename.h".
+	(main): Place optind on the right hand side of the expression, to
+	work around build failure on Solaris.
+
+2015-06-23  Daiki Ueno  <ueno@gnu.org>
+
 	* Makefile.am (uninstall-local): Remove cldr-plurals.
 
 2015-06-23  Daiki Ueno  <ueno@gnu.org>
