--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,5 +1,11 @@
 2015-06-24  Daiki Ueno  <ueno@gnu.org>
 
+	* msgfilter-8: Port the "echo -n" equivalent from gettext-2.
+	Reported by paul zimmermann in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2015-06/msg00019.html>.
+
+2015-06-24  Daiki Ueno  <ueno@gnu.org>
+
 	* cldr-plurals-1: Skip if XML is not supported.
 	* msginit-4: Likewise.
 
