Fix reporter credit

--- a/THANKS
+++ b/THANKS
@@ -266,6 +266,7 @@ Paul D. Smith           psmith@gnu.org
 Paul Eggert             eggert@twinsun.com
 Paul Jarc               prj@po.cwru.edu
 Paul Martinolich        martinol@nrlssc.navy.mil
+Paul Zimmermann         Paul.Zimmermann@inria.fr
 Pavel Kharitonov        ineiev@gnu.org
 Pavel Raiskup           praiskup@redhat.com
 Pavel Roskin            proski@gnu.org
