--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,7 +1,7 @@
 2015-06-24  Daiki Ueno  <ueno@gnu.org>
 
 	* msgfilter-8: Port the "echo -n" equivalent from gettext-2.
-	Reported by paul zimmermann in:
+	Reported by Paul Zimmermann in:
 	<https://lists.gnu.org/archive/html/bug-gettext/2015-06/msg00019.html>.
 
 2015-06-24  Daiki Ueno  <ueno@gnu.org>
