xgettext: avoid out-of-bounds read in literals
* gettext-tools/src/x-c.c (literalstring_parse): Check if the next
character of a backslash is NUL.  Reported by Hanno Boeck in:
<http://savannah.gnu.org/bugs/?45391>.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2015-06-24  Daiki Ueno  <ueno@gnu.org>
+
+	* x-c.c (literalstring_parse): Check if the next character of a
+	backslash is NUL.
+	Reported by Hanno Boeck in:
+	<http://savannah.gnu.org/bugs/?45391>.
+
 2015-06-23  Daiki Ueno  <ueno@gnu.org>
 
 	* cldr-plurals.c (main): Fix unmatched braces when
