xgettext: Make literal parser robust against NUL
* gettext-tools/src/x-c.c (literalstring_parse): Add more NUL checks.
Change the loop invariant so that C always points to the character
previously pointed by P.
Reported by Hanno Boeck in:
<http://savannah.gnu.org/bugs/?45391>.

* gettext-tools/tests/xg-c-21.c (main): New file.
* gettext-tools/tests/xgettext-c-21 (result): New file.
* gettext-tools/tests/Makefile.am (TESTS): Add new test.
(EXTRA_DIST): Add xg-c-21.c.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2015-06-25  Daiki Ueno  <ueno@gnu.org>
+
+	* x-c.c (literalstring_parse): Add more NUL checks.  Change the
+	loop invariant so that C always points to the character previously
+	pointed by P.
+	Reported by Hanno Boeck in:
+	<http://savannah.gnu.org/bugs/?45391>.
+
 2015-06-24  Daiki Ueno  <ueno@gnu.org>
 
 	* x-c.c (literalstring_parse): Check if the next character of a
