--- a/THANKS
+++ b/THANKS
@@ -143,6 +143,7 @@ Guillem Jover           guillem@hadrons.org
 Hagen Fritsch           itooktheredpill@gmx.de
 Haibin Zhang            dragzhb@yahoo.com.cn
 Han Boetes              han@mijncomputer.nl
+Hanno Boeck             hanno@gentoo.org
 Hans Ulrich Niedermann  debian@n-dimensional.de
 Henry Nelson            netb@yuba.ne.jp
 H. J. Lu                hjl@lucon.org
