--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	intl: Update from gnulib
+	* localename.c: Update from gnulib.
+
 2015-06-23  Daiki Ueno  <ueno@gnu.org>
 
 	* locale.alias: Update from glibc:
