--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,26 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	* po/bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
+	* po/ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
+	* po/cs.po: Update from Marek Černocký <marek@manet.cz>.
+	* po/da.po: Update from Joe Hansen <joedalton2@yahoo.dk>.
+	* po/de.po: Update from Philipp Thomas <pth@suse.de>.
+	* po/es.po: Update from Antonio Ceballos <aceballos@gmail.com>.
+	* po/fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+	* po/fr.po: Update from Stéphane Aulery <lkppo@free.fr>.
+	* po/hu.po: Update from Balázs Úr <urbalazs@gmail.com>.
+	* po/ja.po: Update from Masahito Yamaga <ma@yama-ga.com>.
+	* po/ms.po: Update from Sharuzzaman Ahmat Raslan <sharuzzaman@gmail.com>.
+	* po/nl.po: Update from Benno Schulenberg <benno@vertaalt.nl>.
+	* po/pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
+	* po/ro.po: Update from Mihai Cristescu <mihai.cristescu@archlinux.info>.
+	* po/ru.po: Update from Yuri Kozlov <yuray@komyakino.ru>.
+	* po/sk.po: Update from Marcel Telka <marcel@telka.sk>.
+	* po/sl.po: Update from Primož Peterlin <primozz.peterlin@gmail.com>.
+	* po/sr.po: Update from Мирослав Николић <miroslavnikolic@rocketmail.com>.
+	* po/uk.po: Update from Yuri Chornoivan <yurchor@ukr.net>.
+	* po/vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
+
 2015-03-07  Daiki Ueno  <ueno@gnu.org>
 
 	* hello-c-gnome3/Makefile.am (hello.desktop): Remove unnecessary
