--- a/gettext-tools/examples/po/fi.po
+++ b/gettext-tools/examples/po/fi.po
@@ -2,14 +2,14 @@
 # This file is distributed under the same license as the gettext package.
 # Copyright © 2007, 2014 Yoyodyne, Inc. (msgids)
 # Lauri Nurmi <lanurmi@iki.fi>, 2007.
-# Jorma Karvonen <karvonen.jorma@gmail.com>, 2014.
+# Jorma Karvonen <karvonen.jorma@gmail.com>, 2014-2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-examples 0.19-rc1\n"
+"Project-Id-Version: gettext-examples 0.19.4-rc1\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2014-05-10 13:38+0900\n"
-"PO-Revision-Date: 2014-06-23 16:51+0300\n"
+"POT-Creation-Date: 2014-12-10 13:23+0900\n"
+"PO-Revision-Date: 2015-03-20 03:01+0200\n"
 "Last-Translator: Jorma Karvonen <karvonen.jorma@gmail.com>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "Language: fi\n"
@@ -18,7 +18,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 # Tämä nimenomainen käännös valittu GNU Hellon mukaisesti.
-#: hello-c/hello.c:30 hello-c-gnome/hello.c:46 hello-c-gnome3/hello.ui:22
+#: hello-c/hello.c:30 hello-c-gnome/hello.c:46
+#: hello-c-gnome3/hello.desktop.in.in:5 hello-c-gnome3/hello.ui:22
 #: hello-c++/hello.cc:39 hello-c++-qt/hello.cc:45
 #: hello-c++-kde/hellowindow.cc:42 hello-c++-gnome/hello.cc:50
 #: hello-c++-wxwidgets/hello.cc:68 hello-objc/hello.m:30
@@ -48,9 +49,21 @@ msgstr "Terve maailma!"
 msgid "This program is running as process number %d."
 msgstr "Tämän ohjelman prosessinumero on %d."
 
+#: hello-c-gnome3/hello.desktop.in.in:4
+msgid "Hello"
+msgstr "Hei"
+
 #: hello-c-gnome3/hello.ui:5
 msgid "Example Application"
 msgstr "Esimerkkisovellus"
+
+#: hello-c-gnome3/hello.gschema.xml:7
+msgid "Set label sensitive"
+msgstr "Aseta nimiöherkkyys"
+
+#: hello-c-gnome3/hello.gschema.xml:8
+msgid "Whether to set the label sensitive."
+msgstr "Asetetaanko nimiöherkkyys."
 
 #: hello-c++-qt/hello.cc:52 hello-c++-kde/hellowindow.cc:49
 #: hello-smalltalk/hello.st.in:32 hello-ycp/hello.ycp:19
