--- a/gettext-tools/examples/po/sr.po
+++ b/gettext-tools/examples/po/sr.po
@@ -2,13 +2,13 @@
 # Copyright (C) 2014 Yoyodyne, Inc. (msgids)
 # This file is distributed under the same license as the gettext package.
 # Aleksandar Jelenak <jelenak@netlinkplus.net>, 2004.
-# Мирослав Николић <miroslavnikolic@rocketmail.com>, 2014.
+# Мирослав Николић <miroslavnikolic@rocketmail.com>, 2014—2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gettext-examples-0.19-rc1\n"
+"Project-Id-Version: gettext-examples-0.19.4-rc1\n"
 "Report-Msgid-Bugs-To: bug-gnu-gettext@gnu.org\n"
-"POT-Creation-Date: 2014-05-10 13:38+0900\n"
-"PO-Revision-Date: 2014-05-12 21:25+0200\n"
+"POT-Creation-Date: 2014-12-10 13:23+0900\n"
+"PO-Revision-Date: 2015-04-12 11:08+0200\n"
 "Last-Translator: Мирослав Николић <miroslavnikolic@rocketmail.com>\n"
 "Language-Team: Serbian <(nothing)>\n"
 "Language: sr\n"
@@ -16,9 +16,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Virtaal 0.7.1\n"
 
-#: hello-c/hello.c:30 hello-c-gnome/hello.c:46 hello-c-gnome3/hello.ui:22
+#: hello-c/hello.c:30 hello-c-gnome/hello.c:46
+#: hello-c-gnome3/hello.desktop.in.in:5 hello-c-gnome3/hello.ui:22
 #: hello-c++/hello.cc:39 hello-c++-qt/hello.cc:45
 #: hello-c++-kde/hellowindow.cc:42 hello-c++-gnome/hello.cc:50
 #: hello-c++-wxwidgets/hello.cc:68 hello-objc/hello.m:30
@@ -48,9 +48,21 @@ msgstr "Здраво свима!"
 msgid "This program is running as process number %d."
 msgstr "Овај програм се извршава као процес број %d."
 
+#: hello-c-gnome3/hello.desktop.in.in:4
+msgid "Hello"
+msgstr "Здраво"
+
 #: hello-c-gnome3/hello.ui:5
 msgid "Example Application"
 msgstr "Програм примера"
+
+#: hello-c-gnome3/hello.gschema.xml:7
+msgid "Set label sensitive"
+msgstr "Подешава осетљивост натписа"
+
+#: hello-c-gnome3/hello.gschema.xml:8
+msgid "Whether to set the label sensitive."
+msgstr "Да ли ће да подеси осетљивост натписа."
 
 #: hello-c++-qt/hello.cc:52 hello-c++-kde/hellowindow.cc:49
 #: hello-smalltalk/hello.st.in:32 hello-ycp/hello.ycp:19
@@ -60,11 +72,11 @@ msgstr "Овај програм се извршава као процес бро
 
 #: hello-c++-kde/hello.cc:46
 msgid "Hello example"
-msgstr "„Здраво“ пример"
+msgstr "Пример „Здраво“"
 
 #: hello-c++-kde/hello.cc:48
 msgid "Hello world example"
-msgstr "„Здраво свима“ пример"
+msgstr "Пример „Здраво свима“"
 
 #: hello-sh/hello.sh:17
 #, sh-format
