--- a/gettext-runtime/doc/ChangeLog
+++ b/gettext-runtime/doc/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.5 released.
+
 2015-06-23  Daiki Ueno  <ueno@gnu.org>
 
 	* matrix.texi: Regenerate for 0.19.5.
