--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,9 @@
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.5 released.
+
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
 	intl: Update from gnulib
 	* localename.c: Update from gnulib.
 
