--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,9 @@
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.5 released.
+
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
 	* bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
 	* ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
 	* cs.po: Update from Marek Černocký <marek@manet.cz>.
