--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.5 released.
+
 2015-06-25  Daiki Ueno  <ueno@gnu.org>
 
 	* woe32dll/gettextsrc-exports.c: Export syntax_check_name.
