--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.5 released.
+
 2015-03-06  Daiki Ueno  <ueno@gnu.org>
 
 	* Makefile.am (libgettextpo_la_AUXSOURCES): Add
