--- a/gettext-tools/man/ChangeLog
+++ b/gettext-tools/man/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.5 released.
+
 2015-06-23  Daiki Ueno  <ueno@gnu.org>
 
 	* help2man: Update copyright year.
