--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-10  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.5 released.
+
 2015-06-29  Daiki Ueno  <ueno@gnu.org>
 
 	* msginit.c (catalogname_for_locale): Remove sr_YU, which were
