build: Avoid link error on Mac OS X < 10.6
Reported by Ryan Schmidt in:
<http://savannah.gnu.org/bugs/?45527>.
* autogen.sh (GNULIB_MODULES_LIBGETTEXTPO): Add stpncpy.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-07-12  Daiki Ueno  <ueno@gnu.org>
+
+	build: Avoid link error on Mac OS X < 10.6
+	Reported by Ryan Schmidt in:
+	<http://savannah.gnu.org/bugs/?45527>.
+	* autogen.sh (GNULIB_MODULES_LIBGETTEXTPO): Add stpncpy.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
