build: Substitute archive version with configure
* gettext-tools/configure.ac (ARCHIVE_VERSION): New substituted
variable.
* gettext-tools/misc/gettextize.in (archive_version): New variable, set
to ARCHIVE_VERSION.  Use it as the argument of AM_GNU_GETTEXT_VERSION.
* gettext-tools/tests/init-env.in (ARCHIVE_VERSION): New substituted
variable.
* gettext-tools/tests/autopoint-2: Use ARCHIVE_VERSION, instead of the
hard-coded version string.
* gettext-tools/tests/autopoint-3: Likewise.

--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,9 @@
+2015-07-28  Daiki Ueno  <ueno@gnu.org>
+
+	* gettextize.in (archive_version): New variable, set to
+	ARCHIVE_VERSION.  Use it as the argument of
+	AM_GNU_GETTEXT_VERSION.
+
 2015-07-27  Daiki Ueno  <ueno@gnu.org>
 
 	gettextize: Use a crafted version string
