--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-28  Daiki Ueno  <ueno@gnu.org>
+
+	* configure.ac (ARCHIVE_VERSION): New substituted variable.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
