autopoint: Respect AM_GNU_GETTEXT_REQUIRE_VERSION
* gettext-runtime/m4/gettext.m4 (AM_GNU_GETTEXT_REQUIRE_VERSION): New macro.
Bump serial to 67.
* gettext-tools/doc/autopoint.texi: Mention AM_GNU_GETTEXT_REQUIRE_VERSION.
* gettext-tools/misc/gettextize.in: Check if AM_GNU_GETTEXT_VERSION is
used.
* gettext-tools/misc/autopoint.in: Respect AM_GNU_GETTEXT_REQUIRE_VERSION.
* gettext-tools/tests/autopoint-2: Check AM_GNU_GETTEXT_REQUIRE_VERSION.

--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,5 +1,10 @@
 2015-07-28  Daiki Ueno  <ueno@gnu.org>
 
+	* gettextize.in: Check if AM_GNU_GETTEXT_VERSION is used.
+	* autopoint.in: Respect AM_GNU_GETTEXT_REQUIRE_VERSION.
+
+2015-07-28  Daiki Ueno  <ueno@gnu.org>
+
 	* gettextize.in (archive_version): New variable, set to
 	ARCHIVE_VERSION.  Use it as the argument of
 	AM_GNU_GETTEXT_VERSION.
