--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2015-07-28  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext.m4 (AM_GNU_GETTEXT_REQUIRE_VERSION): New macro.  Bump
+	serial to 67.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
