--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-28  Daiki Ueno  <ueno@gnu.org>
+
+	* autopoint.texi: Mention AM_GNU_GETTEXT_REQUIRE_VERSION.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
