--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2015-08-24  Daiki Ueno  <ueno@gnu.org>
+
+	* xgettext.c (construct_header): Replace PACKAGE placeholder in
+	the header comment.
+
 2015-06-11  Philip Withnall  <philip.withnall@collabora.co.uk>
 
 	xgettext: add support for AppData files
