--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,8 @@
+2015-09-01  Daiki Ueno  <ueno@gnu.org>
+
+	* Makefile.in.in ($(DOMAIN).pot-update): Replace header comment
+	with the content of $(DOMAIN).pot-header, if exists.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
