--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Version 0.19.6 - September 2015
+
+* Programming languages support:
+  - AppData:
+    xgettext now supports AppData file format, used to describe
+    installable applications.
+
+* A new macro AM_GNU_GETTEXT_REQUIRE_VERSION can be used to indicate
+  autopoint to pull the latest available infrastructure, instead of
+  the exact version specified with AM_GNU_GETTEXT_VERSION.  When
+  AM_GNU_GETTEXT_REQUIRE_VERSION is used, AM_GNU_GETTEXT_VERSION is
+  ignored.
+
+* po/Makefile.in.in can now read the file $(DOMAIN).pot-header if
+  exists, to insert arbitrary comment into the beginning of $(DOMAIN).pot.
+
+* Bug fixes:
+  - po-mode now works with four-part msgfmt version numbers.
+  - Fix build with --enable-relocatable.
+
 Version 0.19.5 - July 2015
 
 * xgettext now has a feature to perform syntax checks on msgid, which
