--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,9 @@ Version 0.19.6 - September 2015
 
 * Programming languages support:
   - AppData:
-    xgettext now supports AppData file format, used to describe
-    installable applications.
+    xgettext now supports AppData file format, used by software center
+    applications (e.g., GNOME Software) to describe installable
+    applications.
 
 * A new macro AM_GNU_GETTEXT_REQUIRE_VERSION can be used to indicate
   autopoint to pull the latest available infrastructure, instead of
@@ -11,11 +12,12 @@ Version 0.19.6 - September 2015
   AM_GNU_GETTEXT_REQUIRE_VERSION is used, AM_GNU_GETTEXT_VERSION is
   ignored.
 
-* po/Makefile.in.in can now read the file $(DOMAIN).pot-header if
-  exists, to insert arbitrary comment into the beginning of $(DOMAIN).pot.
+* po/Makefile.in.in can now insert the file $(DOMAIN).pot-header to
+  $(DOMAIN).pot, instead of the standard header comments.
 
 * Bug fixes:
-  - po-mode now works with four-part msgfmt version numbers.
+  - Fix mishandling of gettext version numbers for minor releases, in
+    po-mode.el and gettextize.
   - Fix build with --enable-relocatable.
 
 Version 0.19.5 - July 2015
