--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,11 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+	* gl.po: Update from Leandro Regueiro <leandro.regueiro@gmail.com>.
+	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
+	* zh_CN.po: Update from Ji ZhengYu <zhengyuji@gmail.com>.
+
 2015-09-01  Daiki Ueno  <ueno@gnu.org>
 
 	* Makefile.in.in ($(DOMAIN).pot-update): Replace header comment
