--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,9 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* po/fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+	* po/it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+	* po/zh_CN.po: Update from Ji ZhengYu <zhengyuji@gmail.com>.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
