--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,10 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
+	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
+	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
+	* zh_CN.po: Update from Ji ZhengYu <zhengyuji@gmail.com>.
+
 2015-07-10  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.5 released.
