--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.6 released.
+
 2015-08-26  Paul Eggert  <eggert@cs.ucla.edu>
 
 	intl: fix memory leak in _nl_load_domain
