--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.6 released.
+
 2015-07-28  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext.m4 (AM_GNU_GETTEXT_REQUIRE_VERSION): New macro.  Bump
