--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,9 @@
 2015-09-11  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.6 released.
+
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
 	* fi.po: Update from Jorma Karvonen <karvonen.jorma@gmail.com>.
 	* gl.po: Update from Leandro Regueiro <leandro.regueiro@gmail.com>.
 	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
