--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.6 released.
+
 2015-07-28  Daiki Ueno  <ueno@gnu.org>
 
 	* gettextize.in: Check if AM_GNU_GETTEXT_VERSION is used.
