--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-11  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.6 released.
+
 2015-08-24  Daiki Ueno  <ueno@gnu.org>
 
 	* xgettext.c (construct_header): Replace PACKAGE placeholder in
